# medical-chatbot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.py  run_tests.ps1  run_tests.py  streamlit_app.py
.kilo/: agent-manager.json
.kilo/worktrees/receptive-ketchup/: requirements.txt
.kilo/worktrees/receptive-ketchup/backend/: config.py  llm_server.py  medical_rag_server.py
.kilo/worktrees/receptive-ketchup/frontend/: enhanced-medical-chatbot.html  styles.css
.kilo/worktrees/receptive-ketchup/tests/: test_rag_engine.py
backend/: __init__.py  config.py  medical_rag_engine.py  medical_rag_server.py
backend/api/: __init__.py  chat.py  chat_routes.py  dependencies.py  deps.py
backend/core/: __init__.py  monitoring.py  profiling.py  reliability.py  security.py
backend/data/: kaggle_symptom2disease.csv
backend/models/: __init__.py  errors.py  schemas.py
backend/rag/: __init__.py  context.py  document_loader.py  engine.py  entities.py  memory.py  symptoms.py  vector_store.py
backend/services/: __init__.py  conversation_service.py
frontend/: app.js  enhanced-medical-chatbot.html  serve_frontend.py  styles.css
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
scripts/: start_local.bat  start_rag_system.sh  stop_rag_system.sh  system_pids.txt
tests/: conftest.py  test_api_integration.py  test_rag_engine.py
